syntax = "proto3";
package greeter;

option objc_class_prefix = "GGS";

message GreeterRequest {
  string name = 1;
}

message GretterReply {
  string message = 1;
}

service Greeter {
  rpc SayHello(GreeterRequest) returns (GretterReply) {}
}